[package]
name = "market_data"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }          # HTTP client
serde = { version = "1.0", features = ["derive"] }           # Serialization/Deserialization
serde_json = { version = "1.0", features = ["raw_value"] }   # JSON parsing
tokio = {version = "1.30.0", features = ["full"]}            # Asynchronous runtime for Rust
dotenv = "0.15.0"                                            # Loads env vars from .env