[package]
name = "market_data"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }          # HTTP client
serde = { version = "1.0", features = ["derive"] }           # Serialization/Deserialization
serde_json = { version = "1.0", features = ["raw_value"] }   # JSON parsing
tokio = {version = "1.30.0", features = ["full"]}            # Asynchronous runtime for Rust
dotenv = "0.15.0"                                            # Loads env vars from .env
config = "0.13"                                              # To parse configuration .toml files
clap = { version = "4.3", features = ["derive"] }            # Cmd args parser
tokio-tungstenite = "0.17"                                   # Websocket handler
futures = "0.3"
futures-util = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"